--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
 /* Global */
-
 * {
     box-sizing: border-box;
 }
@@ -43,7 +42,7 @@ header, main, footer {
     text-align: center; 
 }
 
-header, main, .form {
+header, .form {
     /* Espaçamentos com margin */
     margin: 0 auto 70px;
 
@@ -52,8 +51,16 @@ header, main, .form {
     max-width: 500px;
 }
 
-/* header */
+main {
+    /* Espaçamentos com margin */
+    margin: 0 auto;
 
+    /* Limites dos elementos na página */
+    width: 90%;
+    max-width: 500px;
+}
+
+/* header */
 header button {
     margin-top: 16px;
     padding: 8px 16px;
@@ -90,10 +97,10 @@ form input, form button {
 
     margin-bottom: 4px;
 
-/* preenchimento */
+    /* preenchimento */
     padding: 8px 16px;
 
-/* bordas */
+    /* bordas */
     border-radius: 4px;
     border: 1px #ffffff88 solid;
 }
@@ -108,6 +115,18 @@ form input:placeholder {
 
 form button {
     font-weight: bold;
+}
+
+/* Funcionalidades com Javascript */
+section.form {
+    transition: all 300ms;
+}
+
+section.form.hide {
+    opacity: 0;
+    visibility: hidden;
+    height: 0;
+    margin-top: -70px;
 }
 
 /* Main */
@@ -130,7 +149,7 @@ main .donors {
 
 .blood::before {
     content: "";
-    background-color: #ff4f4f11;
+    background-color: #ff4f4f66;
     width: 40px;
     height: 40px;
 
@@ -145,6 +164,7 @@ main .donors {
 
 .donor p{
     margin-top: 24px;
+    margin-bottom: 64px;
     font-size: 14px;
 }
 
@@ -152,17 +172,5 @@ footer {
     margin-top: auto;
     padding: 16px;
 
-    border: 1px solid #eee;
-}
-
-/* Funcionalidades com Javascript */
-section.form {
-    transition: all 300ms;
-}
-
-section.form.hide {
-    opacity: 0;
-    visibility: hidden;
-    height: 0;
-    margin-top: -70px;
+    border: 1px solid #ff4f4f66;
 }
